# cardetector

./: .Doxyfile  .gitignore  .travis.yml  LICENSE.md  README.md  docgen.sh
automatic_training/: train.sh
data/: carDetector56x48.yml  carDetector56x48_front_ov_100h.yml  negative_features.mat  peopleDetector48x96.yml  peopleDetector64x128.yml
data/nclabel_2/: N000000.txt  N000001.txt  N000002.txt  N000003.txt  N000004.txt  N000005.txt  N000006.txt  N000007.txt  N000008.txt
data/testing_label_2/: 000000.txt  000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt  000009.txt  000010.txt  000011.txt  000012.txt  000013.txt  000014.txt  000015.txt  000016.txt  000017.txt  000018.txt  000019.txt  000020.txt  000021.txt  000022.txt  000023.txt  000024.txt  000025.txt  000026.txt  000027.txt  000028.txt  000029.txt  000030.txt  000031.txt  000032.txt  000033.txt  000034.txt  000035.txt  000036.txt  000037.txt  000038.txt  000039.txt  (+58 more)
doc/: .Doxyfile  docgen.sh  dogcgen.sh  workflow.gv
matlab/: ngmining_setup.txt  testing_setup.txt
matlab/automatic/: ngmining_training.m  ngmining_training_v2.m
matlab/ngmining/: Untitled.m  generate_rectangle_64x128.m  negative_mining_write_sample.m  negative_mining_write_sample_front.m  negative_mining_write_sample_front_test.m  negative_mining_write_sample_pedestrain.m  negative_mining_write_sample_v2.m
matlab/testing/: Detector_testing_car_and_ped.m  Detector_testing_car_and_ped_single.m  testBinaryIO.m
src/detector/: CMakeLists.txt  README.txt  classifiers.txt  detector.cpp  makefile
(+29 files in other folders)
